
Alpha 1.15 (started 18/10/22) "Ladyfish Update":
	ADD: Added maps.
	CHG: Moved data files to another hard drive.
	CHG: Replaced the timer dialog in the room 23 (0F) of the Ruins by a real timer sound (#37).
	CHG: Changed the room 14 (B1) of the Forest Temple structure in order to be able to move the block from every directions (#6).
	FIX: Fixed missing "tunic0" sprite in the hero head's sprite in the minimap.
	FIX: Fixed map inconsistencies.
	FIX: Fixed some wrong bushes weights.
	FIX: Fixed pot layers in rooms 18 and 27 (B2) of the Fire Temple being wrong.
	FIX: Fixed missing wall tile in room 35 (door 35N) of the Fire Temple (B2).
	FIX: Fixed owl not appearing before dungeon 3 because audio_manager not loaded.
	FIX: Fixed destructibles weights being too high around the Blacksmith.
	FIX: Fixed teletransporter to Temple of Time linking to a deleted map (#40).
	FIX: Fixed door at the north of the room 8 (0F) of the Forest Temple being closed when arriving from downstairs (#7).
	TDO: Add dialogues for Sahasrahla.
	TDO: Add dialogues for Ravio.
	TDO: Replace corrupted files.
	TDO: Fix pot weights in the Forest Temple.
	TDO: Fix water restting itself in the Forest Temple (B2).
	TDO: Fix "yellow_key" not saved in the Forest Temple.
	TDO: Update the minimap of the Forest Temple.
	TDO: Copy changelog.txt issues to GitHub in order to improve issue tracking.
	TDO: Progressively switch enemies behaviour to ALTTD'S.
	TDO: Fix diagonal jumpers jump lenghts being too high in the mountains (#38).
	TDO: Fix not enough memory issues on MacOS (#39).

Alpha 1.15.1 (//23) "Ladyfish Update": Sprites and images
	TDO: Fix game intro dialogues.
	TDO: Add items treasure and inventory missing dialogues.
	TDO: Fix victory animation not being synchronised with Link movement.
	TDO: Fix wrong dialogue icons.
	TDO: Clean up unused sprite files.
	TDO: Fix Link being invisible after fighting boss.

Alpha 1.16 (//23) "Mackerel Update": Improvement
	TDO: Add maps.