@@ -5,8 +5,8 @@ quest{
   short_description = "The most exciting adventure game with ABSOLUTELY no bugs or glitches!",
   long_description = [[
 ]],
-  author = "L'Autocuiseur, Linkff, Prince DeDeDew",
-  quest_version = "Alpha 1.15 \"Ladyfish Update\"",
+  author = "L'Autocuiseur, Linkff, Prince DeDeDe",
+  quest_version = "Alpha 1.15 \"Ladyfish Update\" indev",
   release_date = "",
   website = "",
   normal_quest_size = "320x240",
