@@ -230,6 +230,8 @@ Alpha 1.15 (started 18/10/22) "Ladyfish Update":
 	CHG: Moved data files to another hard drive.
 	CHG: Replaced the timer dialog in the room 23 (0F) of the Ruins by a real timer sound (#37).
 	CHG: Changed the room 14 (B1) of the Forest Temple structure in order to be able to move the block from every directions (#6).
+	CHG: Copied changelog.txt issues to GitHub in order to improve issue tracking.
+	CHG: Changed some sanctuary priest dialogues.
 	FIX: Fixed missing "tunic0" sprite in the hero head's sprite in the minimap.
 	FIX: Fixed map inconsistencies.
 	FIX: Fixed some wrong bushes weights.
@@ -242,11 +244,11 @@ Alpha 1.15 (started 18/10/22) "Ladyfish Update":
 	TDO: Add dialogues for Sahasrahla.
 	TDO: Add dialogues for Ravio.
 	TDO: Replace corrupted files.
+	TDO: Fix bombs pickables being generated in the "random" item without having the Bomb Bag (#41).
 	TDO: Fix pot weights in the Forest Temple.
-	TDO: Fix water restting itself in the Forest Temple (B2).
+	TDO: Fix water resetting itself in the Forest Temple (B2).
 	TDO: Fix "yellow_key" not saved in the Forest Temple.
 	TDO: Update the minimap of the Forest Temple.
-	TDO: Copy changelog.txt issues to GitHub in order to improve issue tracking.
 	TDO: Progressively switch enemies behaviour to ALTTD'S.
 	TDO: Fix diagonal jumpers jump lenghts being too high in the mountains (#38).
 	TDO: Fix not enough memory issues on MacOS (#39).
